fix visibility of sg-menu on desktop

--- a/src/styleguide/sg-menu/menu.scss
+++ b/src/styleguide/sg-menu/menu.scss
@@ -5,6 +5,12 @@
   transition: opacity .25s ease-in, visibility .25s ease-in;
   padding: 1em;
 
+  // 992px
+  @media(min-width: 62rem) {
+    opacity: 1;
+    visibility: visible;
+  }
+
   > ul {
     display: flex;
     flex-direction: column;
